<resources>
	<string name="facebook_app_id" translatable="false">443955539565356</string>
	<string name="fb_login_protocol_scheme" translatable="false">fb443955539565356</string>
	<string name="web_client_id" translatable="false">371077871536-qq6v8phbjr73ag4lqe4isv5i4rg1idpl.apps.googleusercontent.com</string>
	<string name="twitter_consumer_key" translatable="false">bldwfbCmIjAjXmhPRDYdR1cOx</string>
	<string name="twitter_consumer_secret" translatable="false">Af8hQvZAomZpbebjfbuqwAglMPyqiKbs6MFKLjZeBQgDxVEgsr</string>
	<string name="instagram_app_id" translatable="false">2154573461510903</string>
	<string name="instagram_redirect_url" translatable="false">https://github.com/yanaico/Smart-Fitness</string>
	<string name="instagram_base_url" translatable="false">https://api.instagram.com/</string>
	<string name="app_name">Smart Fitness</string>
	<string name="language">Language</string>
	<string name="languages">Languages</string>
	<string name="login">Login</string>
	<string name="sign_up">Sign up</string>
	<string name="username_email">Username / Email</string>
	<string name="password">Password</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="or_login_using">Or login using</string>
	<string name="change_language_of_app">Change language of app</string>
	<string name="english" translatable="false">English</string>
	<string name="hebrew" translatable="false">עברית</string>
	<string name="by_logging_in_you_accept_our">By logging in you accept our</string>
	<string name="by_signing_in_you_accept_our">By signing in you accept our</string>
	<string name="terms_of_service_underlined"><u>Terms of Service</u></string>
	<string name="terms_of_service">Terms of Service</string>
	<string name="terms_of_use">Terms of Use</string>
	<string name="and">and</string>
	<string name="privacy_policy"><u>Privacy Policy</u></string>
	<string name="privacy_policy_no_underline">Privacy Policy</string>
	<string name="email">Email</string>
	<string name="username">Username</string>
	<string name="forgot_your_password">Forgot your password?</string>
	<string name="no_worries">No worries!</string>
	<string name="please_enter_your_email_address_below">Please enter your email address below and we will send you instructions.</string>
	<string name="an_email_has_been_sent_to_your_email_address">An email has been sent to your email address</string>
	<string name="done">Done</string>
	<string name="send">Send</string>
	<string name="username_email_or_pass_is_incorrect">The username/email or password is incorrect</string>
	<string name="invalid_email_address">Invalid email address</string>
	<string name="username_must_be_3_to_14_characters">Username must be 3 to 14 characters</string>
	<string name="password_must_be_at_least_6_characters">Password must be at least 6 characters, numbers and letters</string>
	<string name="please_enter_only_letters_and_numbers_without_space">Please use only letters and numbers without space</string>
	<string name="or_sign_up_using">Or sign up using</string>
	<string name="something_went_wrong">Something went wrong. Try again later</string>
	<string name="email_is_already_taken">*Email is already taken</string>
	<string name="username_is_already_taken">*Username is already taken</string>
	<string name="add_new_program">Add New Program</string>
	<string name="programs">Programs</string>
	<string name="no_user_with_such_email">No user with such email</string>
	<string name="about">About</string>
	<string name="application_version">Application Version</string>
	<string name="coming_soon">Coming soon!</string>
	<string name="ok">Ok</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="share">Share</string>
	<string name="hi">Hi!</string>
	<string name="home">Home</string>
	<string name="programs_received">Programs received</string>
	<string name="track_your_activity">Track your activity</string>
	<string name="gps_running">GPS Running</string>
	<string name="feedback">Feedback</string>
	<string name="logout">Logout</string>
	<string name="program_name_colon">Program Name:</string>
	<string name="received_on">Received on:</string>
	<string name="from">From:</string>
	<string name="pin_it">Pin it</string>
	<string name="view">View</string>
	<string name="no_training_program_found">No training program found</string>
	<string name="no_training_program_n_found">No training program\nfound</string>
	<string name="what_are_you_waiting_for_click_the_button">What are you waiting for?! Click the button!</string>
	<string name="what_are_you_waiting_for_n_click_the_button">What are you waiting for?!\nClick the button!</string>
	<string name="are_you_sure_you_want_to_delete_this_program">Are you sure you want to delete this program?</string>
	<string name="no">NO</string>
	<string name="yes">YES</string>
	<string name="are_you_sure_logout">Are you sure you want to log out ?</string>
	<string name="no_programs_received_yet">No programs received yet</string>
	<string name="choose_a_training_program_and_start_building">Choose a training program\nand start building !</string>
	<string name="resistance_training">Resistance Training</string>
	<string name="resistance_n_training">Resistance\nTraining</string>
	<string name="circuit_training">Circuit Training</string>
	<string name="circuit_n_training">Circuit\nTraining</string>
	<string name="cardio_training">Cardio Training</string>
	<string name="cardio_n_training">Cardio\nTraining</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="activities">Activities</string>
	<string name="speed_colon">Speed:</string>
	<string name="speed">Speed</string>
	<string name="incline_colon">Incline:</string>
	<string name="incline">Incline</string>
	<string name="pace_colon">Pace:</string>
	<string name="pace">Pace</string>
	<string name="running_walking">Running/Walking</string>
	<string name="total_time">Total Time:</string>
	<string name="total_distance">Total Distance:</string>
	<string name="delete_activity">Delete Activity</string>
	<string name="add_new_row">Add New Row</string>
	<string name="multiply_data">Multiply Data</string>
	<string name="multiply_the_data">Multiply the data</string>
	<string name="cycling">Cycling</string>
	<string name="running">Running</string>
	<string name="elliptical">Elliptical</string>
	<string name="rowing_machine">Rowing Machine</string>
	<string name="rowing">Rowing</string>
	<string name="stair_climbing">Stair Climbing</string>
	<string name="stair">Stair</string>
	<string name="swimming">Swimming</string>
	<string name="jumping_rope">Jumping Rope</string>
	<string name="jumping">Jumping</string>
	<string name="no_activity_found">No activity Found</string>
	<string name="choose_your_activity_from_the_tabs">Choose your activity from the tabs</string>
	<string name="are_you_sure_you_want_to_delete_this_activity">Are you sure you want  to delete this activity ?</string>
	<string name="discard">Discard</string>
	<string name="help">Help</string>
	<string name="note_this_cardio_program_is_a_static">Note: This cardio program is a <b>static program</b>\ndesigned to define the trainee’s activity steps.\nAccording to times, pace and difficulty levels\nThis data is defined by the <u>cardio machines</u>\n But you can perform the same activities without machines</string>
	<string name="step_1">Step 1:</string>
	<string name="choose_one_activity_from_the_tabs">Choose one activity from the tabs</string>
	<string name="step_2">Step 2:</string>
	<string name="in_the_first_row_that_appears">In the first row that appears, click on the pen to add values</string>
	<string name="step_3">Step 3:</string>
	<string name="after_fill_in_the_data_you_can_add_a_new_row_and_prepare_a_multi_data_plan">After fill in the data, you can add a new row and prepare a multi-data plan</string>
	<string name="step_4">Step 4:</string>
	<string name="multiplying_the_data">Multiplying the data will save the time of filling each row individually, and multiply the number of rows by the selected number. (See the next step)</string>
	<string name="step_5">Step 5:</string>
	<string name="if_you_choose_to_multiply">If you choose to multiply by 3 and you have 2 rows that you have already pre-filled, this means that now 6 rows will appear with the same data, 2+2+2 total = 6.</string>
	<string name="step_6">Step 6:</string>
	<string name="when_finished_filling_in_the_data">When finished filling in the data. The total time / distance appears at the bottom of the screen. And now you can SAVE the program and finish</string>
	<string name="total_time_30_00">Total Time: 30:00</string>
	<string name="total_distance_5_0">Total Distance: 5.0</string>
	<string name="rpm">RPM:</string>
	<string name="rpm_asterisk_colon">RPM*:</string>
	<string name="rpm_asterisk">RPM*</string>
	<string name="resistance_level">Resistance(level):</string>
	<string name="spm">SPM:</string>
	<string name="spm_asterisk_colon">SPM*:</string>
	<string name="spm_asterisk">SPM*</string>
	<string name="resistance_colon">Resistance:</string>
	<string name="resistance">Resistance</string>
	<string name="intensity_colon">Intensity:</string>
	<string name="intensity">Intensity</string>
	<string name="style_colon">Style:</string>
	<string name="style">Style</string>
	<string name="exercise_colon">Exercise:</string>
	<string name="fill_at_least_one_value">Please fill at least one value</string>
	<string name="medium">Medium</string>
	<string name="easy">Easy</string>
	<string name="hard">Hard</string>
	<string name="race_pace">Race Pace</string>
	<string name="warm_up">Warm Up</string>
	<string name="cool_down">Cool Down</string>
	<string name="rest">Rest</string>
	<string name="REST">REST:</string>
	<string name="rest_timer">REST: %s</string>
	<string name="front_crawl">Front crawl</string>
	<string name="breaststroke">Breaststroke</string>
	<string name="backstroke">Backstroke</string>
	<string name="butterfly_stroke">Butterfly stroke</string>
	<string name="normal">Normal</string>
	<string name="fast">Fast</string>
	<string name="slow">Slow</string>
	<string name="sprint">Sprint</string>
	<string name="no_legs">No Legs</string>
	<string name="no_hands">No Hands</string>
	<string name="breath_hold">Breath Hold</string>
	<string name="main_set">Main Set</string>
	<string name="edit_data">Edit Data</string>
	<string name="time_colon">Time:</string>
	<string name="time">Time</string>
	<string name="distance_colon">Distance:</string>
	<string name="distance">Distance</string>
	<string name="divider_distance">/Distance</string>
	<string name="mins_500_meters">(mins/500 meters)</string>
	<string name="steps_colon">Steps:</string>
	<string name="steps">Steps</string>
	<string name="by">By</string>
	<string name="profile">Profile</string>
	<string name="personal_info">Personal info</string>
	<string name="birthday">Birthday</string>
	<string name="gender">Gender</string>
	<string name="weight">Weight</string>
	<string name="height">Height</string>
	<string name="level">Level</string>
	<string name="in_progress">In progress...</string>
	<string name="your_progress_story">Your Progress Story</string>
	<string name="measurements">Measurements</string>
	<string name="bmi_needs_it">BMI calculating needs it</string>
	<string name="split_training">Split training</string>
	<string name="delete_split_training">Delete Split Training</string>
	<string name="exercise">Exercise</string>
	<string name="no_exercises_found">No exercises Found</string>
	<string name="click_the_button_to_add">Click the button to add</string>
	<string name="add_new_exercise">Add New Exercises</string>
	<string name="workout_methods">Workout Methods</string>
	<string name="add_exercise_s">Add Exercise(s)</string>
	<string name="select_time">Select Time</string>
	<string name="set_time">Set Time</string>
	<string name="min">Min</string>
	<string name="colon">:</string>
	<string name="sec">Sec</string>
</resources>