<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/toolbar"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/TopBar">


	<TextView
		android:id="@+id/topBarTitleView"
		style="@style/TopBarTitle"
		android:text="@string/cardio_training"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/topBarDiscardBtn"
		style="@style/TopBarButton"
		android:text="@string/discard"
		android:layout_marginStart="16dp"
		android:visibility="gone"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		/>

	<ImageButton
		android:id="@+id/topBarBackBtn"
		style="@style/TopBarButton"
		android:layout_marginStart="16dp"
		android:contentDescription="@null"
		android:src="@drawable/icon_arrow_start"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/topBarSaveBtn"
		style="@style/TopBarButton"
		android:layout_marginEnd="10dp"
		android:text="@string/save"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageButton
		android:id="@+id/imageButtonHelpCardio"
		style="@style/TopBarButton"
		android:layout_marginEnd="14dp"
		android:contentDescription="@null"
		android:src="@drawable/icon_help"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/topBarSaveBtn"
		app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>