<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/almost_white_background">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/topBar"
		style="@style/TopBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/discardBtn"
			style="@style/TopBarButton"
			android:layout_marginStart="10dp"
			android:text="@string/discard"
			android:visibility="visible"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_chainStyle="spread_inside"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<ImageButton
			android:id="@+id/backBtn"
			style="@style/TopBarButton"
			android:layout_marginStart="8dp"
			android:contentDescription="@null"
			android:padding="8dp"
			android:src="@drawable/icon_arrow_start"
			android:visibility="gone"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.constraintlayout.widget.Barrier
			android:id="@+id/vBarrier"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:barrierDirection="right"
			app:constraint_referenced_ids="backBtn,discardBtn" />

		<TextView
			android:id="@+id/topBarTitleView"
			style="@style/TopBarTitle"
			android:text="@string/resistance_training"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/saveBtn"
			app:layout_constraintStart_toEndOf="@id/vBarrier"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/saveBtn"
			style="@style/TopBarButton"
			android:layout_marginEnd="10dp"
			android:text="@string/save"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginHorizontal="7.7dp"
		android:layout_marginTop="45dp"
		android:layout_marginBottom="20dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/topBar"
		app:layout_constraintBottom_toTopOf="@id/splitBtn">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/muscleTypeRecyclerView"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"
			app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
			app:spanCount="3"
			tools:listitem="@layout/muscle_type_item_view"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"/>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<Button
		android:id="@+id/splitBtn"
		style="@style/OrangeButton"
		android:paddingHorizontal="24dp"
		android:text="@string/split_training"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>

	<Button
		android:id="@+id/deleteSplitBtn"
		style="@style/OrangeButton"
		android:paddingHorizontal="24dp"
		android:text="@string/delete_split_training"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>